biography and portfolio WIP

--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -4,11 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./styles/main.css">
     <title>Pa Zama | Web developer</title>
 </head>
 <body>
     <header>web developer | Patricia Fdez Zamanillo</header>
-    <nav>hello biography work contact</nav>
+    <nav><a href="./index.html">hello</a> 
+        <a href="./pages/biografia.html">biography</a>  
+        <a href="./pages/portfolio.html">work</a>
+        <a href="./pages/contacto.html">contact</a>
+    </nav>
     <main>
         <aside></aside>
         <section></section>
