--- a/portfolio-main/pages/biografia.html
+++ b/portfolio-main/pages/biografia.html
@@ -8,5 +8,32 @@
 </head>
 <body>
     <!-- mín text y 1 img -->
-</body>
+    <header>
+       <h1>Esta es mi trayectoria ...</h1>
+    </header>
+    <main>
+       <div class="text-biography">
+          <p>Desde los 5 años Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, quo ipsam aliquid unde quaerat nihil, rerum laboriosam necessitatibus recusandae autem repudiandae nisi sint dolor. Perferendis pariatur illo qui minus amet.</p>
+       </div>
+       <div class="list">
+          <ul>
+             <li>A</li>
+             <li>B</li>
+             <li>
+                C                    
+                <ol>
+                   <li>c.1</li>
+                   <li>c.2</li>
+                   <li>c.3</li>
+                </ol>
+             </li>
+             <li>D</li>
+             <li>E</li>
+          </ul>
+       </div>
+       <div class="img-biography">
+          <img src="" alt="" srcset="">
+       </div>
+    </main>
+ </body>
 </html>
