--- a/portfolio-main/pages/portfolio.html
+++ b/portfolio-main/pages/portfolio.html
@@ -8,6 +8,15 @@
 </head>
 <body>
     <!-- mín algunos elementos multimedia (imágenes, videos, audios) -->
+    <header>
+        <h1>Mi trabajo, una parte de mi ...</h1>
+    </header>
+    <div class="container flexContainer">
+        <div class="cajas"></div>
+        <div class="cajas"></div>
+        <div class="cajas"></div>
+        <div class="cajas"></div>
+     </div>
     <!-- form para subir img -->
 </body>
 </html>
