WIP portfolio page

--- a/portfolio-main/pages/biografia.html
+++ b/portfolio-main/pages/biografia.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./../styles/main.css">
     <title>biography</title>
 </head>
 <body>
@@ -31,9 +32,28 @@
              <li>E</li>
           </ul>
        </div>
+
        <div class="img-biography">
           <img src="" alt="" srcset="">
        </div>
+
+       <section>
+            <article>
+                <img title="value">
+                <img src="" alt="" srcset="">
+                <figcaption></figcaption>
+            </article>
+            <article>
+                <img title="value">
+                <img src="" alt="" srcset="">
+                <figcaption></figcaption>
+            </article>
+            <article>
+                <img title="value">
+                <img src="" alt="" srcset="">
+                <figcaption></figcaption>
+            </article>
+       </section>
     </main>
  </body>
 </html>
