--- a/portfolio-main/pages/contacto.html
+++ b/portfolio-main/pages/contacto.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./../styles/main.css">
     <title>contacto</title>
 </head>
 <body>
@@ -94,10 +95,10 @@
           </div>
           <fieldset>
              <div class="politics"></div>
-             <label for="feeling">Acepto las políticas y ley de protección de datos</label>
              <input type="checkbox" name="feeling" id="feeling" tabindex="10">
+             <label for="feeling">Acepto las políticas y ley de protección de datos</label>
              <div class="form-actions">
-                <input type="submit" name="submit" value="enviar" tabindex="11">
+                <input type="submit" onclick="alert('Mensaje enviado con éxito!')" name="submit" value="enviar" tabindex="11"><!-- alert está ok?-->
                 <input type="reset" name="reset" value="borrar" tabindex="12">
              </div>
           </fieldset>
