WIP menu & footer

--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -9,19 +9,64 @@
 </head>
 <body>
     <header>web developer | Patricia Fdez Zamanillo</header>
-    <nav><a href="./index.html">hello</a> 
-        <a href="./pages/biografia.html">biography</a>  
-        <a href="./pages/portfolio.html">work</a>
-        <a href="./pages/contacto.html">contact</a>
-    </nav>
+	<nav class="navbar">  
+		  <ul class="menu">
+			<li class="nav-item">
+			  <a href="./index.html">Home</a>
+			</li>
+			<li class="nav-item">
+			  <a href="./pages/biografia.html">Biografía</a>
+			</li>
+			<li class="nav-item">
+			  <a href="./pages/biografia.html">Portfolio</a>
+			</li>
+			<li class="nav-item">
+			  <a href="./pages/contacto.html">Contacto</a>
+			</li>
+		  </ul>
+
+		  <div class="mx-auto">
+			<a class="navbar-brand " href="#">Navbar</a>
+		</div>
+
+		  <form class="search-index">
+          <input type="search" name="search" id="search" placeholder="Search">
+          <button type="submit">Search</button>
+          </form>
+	</nav>
+
+
+
     <main>
         <aside></aside>
         <section></section>
         <article>
             <figure></figure>
         </article>
-        <footer></footer>
+
+
+
     </main>
+    <footer>
+        <div class="footer">
+           <nav>
+               <ul class="menu">
+                   <li class="nav-item">
+                       <a href="./index.html">Home</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./pages/biografia.html">Biografía</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./pages/portfolio.html">Portfolio</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./pages/contacto.html">Contacto</a>
+                   </li>
+               </ul>
+           </nav>
+        </div>
+       </footer>
     
 </body>
 </html>
