--- a/portfolio-main/pages/contacto.html
+++ b/portfolio-main/pages/contacto.html
@@ -9,7 +9,32 @@
 </head>
 <body>
     <header>
-       <h1>Te leo, por favor pregúntame ...</h1>
+       <h1>Te leo, por favor pregúntame</h1>
+       <nav class="navbar">  
+        <ul class="menu">
+          <li class="nav-item">
+            <a href="./../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="./biografia.html">Biografía</a>
+          </li>
+          <li class="nav-item">
+            <a href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a href="./contacto.html">Contacto</a>
+          </li>
+        </ul>
+
+        <div class="mx-auto">
+          <a class="navbar-brand " href="#">Navbar</a>
+      </div>
+
+        <form class="search-index">
+        <input type="search" name="search" id="search" placeholder="Search">
+        <button type="submit">Search</button>
+        </form>
+  </nav>
     </header>
     <main>
        <!-- al menos un formulario -->
@@ -108,7 +133,26 @@
           <img src="" alt="">
        </div>
     </main>
-    <footer></footer>
+    <footer>
+        <div class="footer">
+           <nav>
+               <ul class="menu">
+                   <li class="nav-item">
+                       <a href="./../index.html">Home</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./biografia.html">Biografía</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./portfolio.html">Portfolio</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./contacto.html">Contacto</a>
+                   </li>
+               </ul>
+           </nav>
+        </div>
+       </footer>
  </body>
 </html>
 
