--- a/portfolio-main/pages/portfolio.html
+++ b/portfolio-main/pages/portfolio.html
@@ -11,7 +11,34 @@
     <!-- mín algunos elementos multimedia (imágenes, videos, audios) -->
     <header>
         <h1>Mi trabajo, una parte de mi</h1>
-    </header>
+
+    <nav class="navbar">  
+        <ul class="menu">
+          <li class="nav-item">
+            <a href="./../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="./biografia.html">Biografía</a>
+          </li>
+          <li class="nav-item">
+            <a href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a href="./contacto.html">Contacto</a>
+          </li>
+        </ul>
+
+        <div class="mx-auto">
+          <a class="navbar-brand " href="#">Navbar</a>
+      </div>
+
+        <form class="search-index">
+        <input type="search" name="search" id="search" placeholder="Search">
+        <button type="submit">Search</button>
+        </form>
+  </nav>
+</header>
+    <main>
     <div class="container flex-container">
         <div class="box">
             <img src="./../assets/img/asmr-project.jpg" alt="Patricia's asmr project">
@@ -55,15 +82,27 @@
             <input type="Submit" />
         </form>
      </div>
-     <div class="footer">
-        <nav>
-            <ul class="menu">
-                <li><a href="#">Inicio</a></li>
-                <li><a href="#">Portfolio</a></li>
-                <li><a href="#">Biografía</a></li>
-                <li><a href="#">Contacto</a></li>
-            </ul>
-        </nav>
-     </div>
+    </main>
+    <footer>
+        <div class="footer">
+           <nav>
+               <ul class="menu">
+                   <li class="nav-item">
+                       <a href="./../index.html">Home</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./biografia.html">Biografía</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./portfolio.html">Portfolio</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./contacto.html">Contacto</a>
+                   </li>
+               </ul>
+           </nav>
+        </div>
+       </footer>
+
 </body>
 </html>
