--- a/portfolio-main/pages/biografia.html
+++ b/portfolio-main/pages/biografia.html
@@ -11,7 +11,33 @@
     <!-- mín text y 1 img -->
     <header>
        <h1>Esta es mi trayectoria ...</h1>
-    </header>
+
+    <nav class="navbar">  
+        <ul class="menu">
+          <li class="nav-item">
+            <a href="./../index.html">Home</a>
+          </li>
+          <li class="nav-item">
+            <a href="./biografia.html">Biografía</a>
+          </li>
+          <li class="nav-item">
+            <a href="./portfolio.html">Portfolio</a>
+          </li>
+          <li class="nav-item">
+            <a href="./contacto.html">Contacto</a>
+          </li>
+        </ul>
+
+        <div class="mx-auto">
+          <a class="navbar-brand " href="#">Navbar</a>
+      </div>
+
+        <form class="search-index">
+        <input type="search" name="search" id="search" placeholder="Search">
+        <button type="submit">Search</button>
+        </form>
+  </nav>
+</header>
     <main>
        <div class="text-biography">
           <p>Desde los 5 años Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, quo ipsam aliquid unde quaerat nihil, rerum laboriosam necessitatibus recusandae autem repudiandae nisi sint dolor. Perferendis pariatur illo qui minus amet.</p>
@@ -55,5 +81,27 @@
             </article>
        </section>
     </main>
+
+    <footer>
+        <div class="footer">
+           <nav>
+               <ul class="menu">
+                   <li class="nav-item">
+                       <a href="./../index.html">Home</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./biografia>Biografía">Biografía</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./portfolio.html">Portfolio</a>
+                   </li>
+                   <li class="nav-item">
+                       <a href="./contacto.html">Contacto</a>
+                   </li>
+               </ul>
+           </nav>
+        </div>
+       </footer>
+
  </body>
 </html>
