portfolio & contact done

--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -1,72 +1,57 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./styles/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./styles/main.css" />
     <title>Pa Zama | Web developer</title>
-</head>
-<body>
-    <header>web developer | Patricia Fdez Zamanillo</header>
-	<nav class="navbar">  
-		  <ul class="menu">
-			<li class="nav-item">
-			  <a href="./index.html">Home</a>
-			</li>
-			<li class="nav-item">
-			  <a href="./pages/biografia.html">Biografía</a>
-			</li>
-			<li class="nav-item">
-			  <a href="./pages/biografia.html">Portfolio</a>
-			</li>
-			<li class="nav-item">
-			  <a href="./pages/contacto.html">Contacto</a>
-			</li>
-		  </ul>
-
-		  <div class="mx-auto">
-			<a class="navbar-brand " href="#">Navbar</a>
-		</div>
-
-		  <form class="search-index">
-          <input type="search" name="search" id="search" placeholder="Search">
-          <button type="submit">Search</button>
-          </form>
-	</nav>
-
-
+  </head>
+  <body>
+    <h1>Patricia Fdez Zamanillo | Web developer</h1>
+    <nav class="navbar">
+      <ul class="menu">
+        <li class="nav-item">
+          <a href="./index.html">Home</a>
+        </li>
+        <li class="nav-item">
+          <a href="./pages/biografia.html">Biografía</a>
+        </li>
+        <li class="nav-item">
+          <a href="./pages/biografia.html">Portfolio</a>
+        </li>
+        <li class="nav-item">
+          <a href="./pages/contacto.html">Contacto</a>
+        </li>
+      </ul>
+    </nav>
 
     <main>
-        <aside></aside>
-        <section></section>
-        <article>
-            <figure></figure>
-        </article>
-
-
-
+      <aside></aside>
+      <section></section>
+      <article>
+        <figure></figure>
+      </article>
     </main>
     <footer>
-        <div class="footer">
-           <nav>
-               <ul class="menu">
-                   <li class="nav-item">
-                       <a href="./index.html">Home</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="./pages/biografia.html">Biografía</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="./pages/portfolio.html">Portfolio</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="./pages/contacto.html">Contacto</a>
-                   </li>
-               </ul>
-           </nav>
-        </div>
-       </footer>
-    
-</body>
+      <div class="footer">
+        <nav>
+          <ul class="menu">
+            <li class="nav-item">
+              <a href="./index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="./pages/biografia.html">Biografía</a>
+            </li>
+            <li class="nav-item">
+              <a href="./pages/portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a href="./pages/contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+  </body>
 </html>
