--- a/portfolio-main/pages/biografia.html
+++ b/portfolio-main/pages/biografia.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./../styles/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./../styles/main.css" />
     <title>biography</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- mín text y 1 img -->
     <header>
-       <h1>Esta es mi trayectoria ...</h1>
-
-    <nav class="navbar">  
+      <h1>Esta es mi trayectoria</h1>
+      <nav class="navbar">
         <ul class="menu">
           <li class="nav-item">
             <a href="./../index.html">Home</a>
@@ -27,81 +26,76 @@
             <a href="./contacto.html">Contacto</a>
           </li>
         </ul>
-
-        <div class="mx-auto">
-          <a class="navbar-brand " href="#">Navbar</a>
+      </nav>
+    </header>
+    <main>
+      <div class="container text-biography">
+        <p>
+          Desde los 5 años Lorem ipsum dolor sit amet consectetur adipisicing
+          elit. Possimus, quo ipsam aliquid unde quaerat nihil, rerum laboriosam
+          necessitatibus recusandae autem repudiandae nisi sint dolor.
+          Perferendis pariatur illo qui minus amet.
+        </p>
+      </div>
+      <div class="list">
+        <ul>
+          <li>A</li>
+          <li>B</li>
+          <li>
+            C
+            <ol>
+              <li>c.1</li>
+              <li>c.2</li>
+              <li>c.3</li>
+            </ol>
+          </li>
+          <li>D</li>
+          <li>E</li>
+        </ul>
       </div>
 
-        <form class="search-index">
-        <input type="search" name="search" id="search" placeholder="Search">
-        <button type="submit">Search</button>
-        </form>
-  </nav>
-</header>
-    <main>
-       <div class="text-biography">
-          <p>Desde los 5 años Lorem ipsum dolor sit amet consectetur adipisicing elit. Possimus, quo ipsam aliquid unde quaerat nihil, rerum laboriosam necessitatibus recusandae autem repudiandae nisi sint dolor. Perferendis pariatur illo qui minus amet.</p>
-       </div>
-       <div class="list">
-          <ul>
-             <li>A</li>
-             <li>B</li>
-             <li>
-                C                    
-                <ol>
-                   <li>c.1</li>
-                   <li>c.2</li>
-                   <li>c.3</li>
-                </ol>
-             </li>
-             <li>D</li>
-             <li>E</li>
-          </ul>
-       </div>
+      <div class="img-biography">
+        <img src="" alt="" srcset="" />
+      </div>
 
-       <div class="img-biography">
-          <img src="" alt="" srcset="">
-       </div>
-
-       <section>
-            <article>
-                <img title="value">
-                <img src="" alt="" srcset="">
-                <figcaption></figcaption>
-            </article>
-            <article>
-                <img title="value">
-                <img src="" alt="" srcset="">
-                <figcaption></figcaption>
-            </article>
-            <article>
-                <img title="value">
-                <img src="" alt="" srcset="">
-                <figcaption></figcaption>
-            </article>
-       </section>
+      <section>
+        <article>
+          <img title="value" />
+          <img src="" alt="" srcset="" />
+          <figcaption></figcaption>
+        </article>
+        <article>
+          <img title="value" />
+          <img src="" alt="" srcset="" />
+          <figcaption></figcaption>
+        </article>
+        <article>
+          <img title="value" />
+          <img src="" alt="" srcset="" />
+          <figcaption></figcaption>
+        </article>
+      </section>
     </main>
 
     <footer>
-        <div class="footer">
-           <nav>
-               <ul class="menu">
-                   <li class="nav-item">
-                       <a href="./../index.html">Home</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="./biografia>Biografía">Biografía</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="./portfolio.html">Portfolio</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="./contacto.html">Contacto</a>
-                   </li>
-               </ul>
-           </nav>
-        </div>
-       </footer>
-
- </body>
+      <div class="footer">
+        <nav>
+          <ul class="menu">
+            <li class="nav-item">
+              <a href="./../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="./biografia>Biografía">Biografía</a>
+            </li>
+            <li class="nav-item">
+              <a href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+  </body>
 </html>
