--- a/portfolio-main/pages/portfolio.html
+++ b/portfolio-main/pages/portfolio.html
@@ -1,18 +1,17 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./../styles/main.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./../styles/main.css" />
     <title>work</title>
-</head>
-<body>
+  </head>
+  <body>
     <!-- mín algunos elementos multimedia (imágenes, videos, audios) -->
     <header>
-        <h1>Mi trabajo, una parte de mi</h1>
-
-    <nav class="navbar">  
+      <h1>Mi trabajo, una parte de mi</h1>
+      <nav class="navbar">
         <ul class="menu">
           <li class="nav-item">
             <a href="./../index.html">Home</a>
@@ -27,82 +26,81 @@
             <a href="./contacto.html">Contacto</a>
           </li>
         </ul>
-
-        <div class="mx-auto">
-          <a class="navbar-brand " href="#">Navbar</a>
-      </div>
-
-        <form class="search-index">
-        <input type="search" name="search" id="search" placeholder="Search">
-        <button type="submit">Search</button>
-        </form>
-  </nav>
-</header>
+      </nav>
+    </header>
     <main>
-    <div class="container flex-container">
+      <div class="container flex-container">
         <div class="box">
-            <img src="./../assets/img/asmr-project.jpg" alt="Patricia's asmr project">
+          <img
+            src="./../assets/img/asmr-project.jpg"
+            alt="Patricia's asmr project"
+          />
         </div>
         <div class="box">
-            <img src="./../assets/img/medical_web.jpg" alt="Patricia's medical web">
+          <img
+            src="./../assets/img/medical_web.jpg"
+            alt="Patricia's medical web"
+          />
         </div>
         <div class="box">
-            <img src="./../assets/img/qr-concept.jpg" alt="Patricia's QR concept">
+          <img
+            src="./../assets/img/qr-concept.jpg"
+            alt="Patricia's QR concept"
+          />
         </div>
-     </div>
-     <div class="video-portfolio">
+      </div>
+      <div class="video-portfolio">
         <video width="100%" height="30%" controls>
-            <source src="./../assets/video/webdesign.mp4" type="video/mp4">
+          <source src="./../assets/video/webdesign.mp4" type="video/mp4" />
           Your browser does not support the video tag.
-          </video>
-     </div>
-     <div class="container flex-container">
+        </video>
+      </div>
+      <div class="container flex-container">
         <div class="box">
-            <audio controls>
-                <source src="horse.ogg" type="audio/ogg">
-                <source src="horse.mp3" type="audio/mpeg">
-              Este navegdor no puede reproducir el audio.
-              </audio>
+          <audio controls>
+            <source src="horse.ogg" type="audio/ogg" />
+            <source src="horse.mp3" type="audio/mpeg" />
+            Este navegdor no puede reproducir el audio.
+          </audio>
         </div>
         <div class="box">
-            <audio controls>
-                <source src="horse.ogg" type="audio/ogg">
-                <source src="horse.mp3" type="audio/mpeg">
-              Este navegdor no puede reproducir el audio.
-              </audio>
+          <audio controls>
+            <source src="horse.ogg" type="audio/ogg" />
+            <source src="horse.mp3" type="audio/mpeg" />
+            Este navegdor no puede reproducir el audio.
+          </audio>
         </div>
-     </div>
-     <div class="container">
+      </div>
+      <div class="container">
         <form action="" method="GET" enctype="multipart/form-data">
-            <fieldset>
-                <legend>Ayúdame a completementar mi trabajo:</legend>
-                <label for="file">Sube imagen</label>
-                <input type="file" name="file" id="file">
-            </fieldset>
+          <fieldset class="card">
+            <legend>Ayúdame a completementar mi trabajo:</legend>
+            <label for="file">Sube imagen</label>
+            <input type="file" name="file" id="file" />
             <input type="Submit" />
+          </fieldset>
         </form>
-     </div>
+      </div>
     </main>
     <footer>
-        <div class="footer">
-           <nav>
-               <ul class="menu">
-                   <li class="nav-item">
-                       <a href="./../index.html">Home</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="./biografia.html">Biografía</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="./portfolio.html">Portfolio</a>
-                   </li>
-                   <li class="nav-item">
-                       <a href="./contacto.html">Contacto</a>
-                   </li>
-               </ul>
-           </nav>
-        </div>
-       </footer>
-
-</body>
+      <div class="footer">
+        <nav>
+          <ul class="menu">
+            <li class="nav-item">
+              <a href="./../index.html">Home</a>
+            </li>
+            <li class="nav-item">
+              <a href="./biografia.html">Biografía</a>
+            </li>
+            <li class="nav-item">
+              <a href="./portfolio.html">Portfolio</a>
+            </li>
+            <li class="nav-item">
+              <a href="./contacto.html">Contacto</a>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    </footer>
+  </body>
 </html>
