Home & Biography end. The web is ready!

--- a/portfolio-main/index.html
+++ b/portfolio-main/index.html
@@ -27,11 +27,94 @@
     </nav>
 
     <main>
-      <aside></aside>
-      <section></section>
-      <article>
-        <figure></figure>
-      </article>
+      <div class="container flex-container">
+        <div class="flex-container">
+          <div class="box text">
+            <p>
+              <span class="first-letter">L</span>orem ipsum dolor sit, amet
+              consectetur adipisicing elit. Velit eaque porro pariatur ipsam
+              consequuntur nobis laudantium quia perferendis quo deserunt, natus
+              ex doloribus quam at distinctio cum repellat mollitia eos.
+            </p>
+          </div>
+          <div class="box">
+            <a href="./pages/biografia.html">
+              <picture>
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./assets/img/home-biography-400x400m.jpg"
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./assets/img/home-biography-800x800l.jpg"
+                />
+                <img
+                  src="./assets/img/home-biography-200x200s.jpg"
+                  alt="Patricia's biography at home"
+                  title="Patricia's biography at home link"
+                />
+              </picture>
+            </a>
+          </div>
+        </div>
+        <div class="flex-container flex-reverse">
+          <div class="box text">
+            <p>
+              <span class="first-letter">V</span>elit eaque porro pariatur ipsam
+              consequuntur nobis laudantium quia perferendis quo deserunt, natus
+              ex doloribus quam at distinctio cum repellat mollitia eos.
+            </p>
+          </div>
+          <div class="box">
+            <a href="./pages/portfolio.html">
+              <picture>
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./assets/img/home-portfolio-400x400m.jpg"
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./assets/img/home-portfolio-800x800l.jpg"
+                />
+                <img
+                  src="./assets/img/home-portfolio-200x200s.jpg"
+                  alt="Patricia's portfolio at home"
+                  title="Patricia's portfolio at home link"
+                />
+              </picture>
+            </a>
+          </div>
+        </div>
+        <div class="flex-container">
+          <div class="box text">
+            <p>
+              <span class="first-letter">A</span>t distinctio cum repellat
+              mollitia eos. Velit eaque porro pariatur ipsam consequuntur nobis
+              laudantium quia perferendis quo deserunt, natus ex doloribus quam
+              at distinctio cum repellat mollitia eos.
+            </p>
+          </div>
+          <div class="box">
+            <a href="./pages/contacto.html">
+              <picture>
+                <source
+                  media="(min-width: 768px)"
+                  srcset="./assets/img/home-contact-400x400m.jpg"
+                />
+                <source
+                  media="(min-width: 1200px)"
+                  srcset="./assets/img/home-contact-800x800l.jpg"
+                />
+                <img
+                  src="./assets/img/home-contact-200x200s.jpg"
+                  alt="Patricia's contact at home"
+                  title="Patricia's contact at home link"
+                />
+              </picture>
+            </a>
+          </div>
+        </div>
+      </div>
     </main>
     <footer>
       <div class="footer">
