extra about breed dogs

--- a/ej_asincronia_axios/ej_asincronia_axios_perritos/index.html
+++ b/ej_asincronia_axios/ej_asincronia_axios_perritos/index.html
@@ -7,8 +7,15 @@
     <title>Perritos</title>
   </head>
   <body>
-    <h1>Dog API</h1>
-    <p>Guau</p>
+    <h1 id="dog_api_h1">Dog API</h1>
+    <form>
+      <label for="breeds">Choose a breed:</label>
+      <select id="breeds" name="breeds"></select>
+    </form>
+    <h1>Breed images</h1>
+    <div id="breed-imgs"></div>
+    <h1>Breed Random Image</h1>
+    <div id="random-img"></div>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src="./main.js"></script>
   </body>
